--- a/config.yml
+++ b/config.yml
@@ -3,46 +3,98 @@ title: "Sxinar"
 DefaultContentLanguage: tr
 theme: hugo-PaperMod
 
+enableInlineShortcodes: true
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+enableEmoji: true
+pygmentsUseClasses: true
+# googleAnalytics: UA-123-45
+
+minify:
+    disableXML: true
+    # minifyOutput: true
+
 languages:
-  tr:
-    languageName: ":tr:"
-    weight: 1
-    params:
-      languageAltTitle: Turkish
-      homeInfoParams:
-        Title: "Sxinar"
-        Content: Burası benim teknoloji çiftliğim.
+    en:
+        languageName: "English"
+        weight: 1
+        taxonomies:
+          category: categories
+          tag: tags
+          series: series
+        menu:
+            main:
+                - name: Archive
+                  url: archives
+                  weight: 5
+                - name: Search
+                  url: search/
+                  weight: 10
+                - name: Tags
+                  url: tags/
+                  weight: 10
+                - name: WiKi
+                  url: https://github.com/adityatelange/hugo-PaperMod/wiki/
+                - name: Discord
+                  url: https://discord.gg/ahpmTvhVmp
 
-- name: Hugo setup
-uses: peaceiris/actions-hugo@v3.0.0
-            
+    fr:
+        languageName: ":fr:"
+        languageAltTitle: French
+        weight: 2
+        title: PaperModL2
+        taxonomies:
+          category: FRcategories
+          tag: FRtags
+          series: FRseries
+        profileMode:
+            enabled: true
+            title: PaperMod
+            imageUrl: "https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/1f317.svg"
+            imageTitle: ProfileMode image
+            # imageWidth: 120
+            # imageHeight: 120
+            subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
+            buttons:
+                - name: Blog
+                  url: posts
+                - name: Profile Mode
+                  url: https://github.com/adityatelange/hugo-PaperMod/wiki/Features#profile-mode
+        menu:
+            main:
+                - name: Archive
+                  url: archives/
+                  weight: 5
+                - name: FRTags
+                  url: frtags
+                  weight: 10
+                - name: FRCategories
+                  url: frcategories
+                  weight: 10
+                - name: FRSeries
+                  url: frseries
+                  weight: 10
+                - name: NullLink
+                  url: "#"
 
-menu:
-  main:
-    - identifier: Anasayfa
-      name: Anasayfa
-      url: /
-      weight: 1
-    - identifier: Blog
-      name: Blog
-      url: /post/
-      weight: 2
-    - identifier: İletişim
-      name: İletişim
-      url: /page/iletisim/
-      weight: 6
-    - identifier: Kategoriler
-      name: Kategoriler
-      url: /tags/
-      weight: 3
-    - identifier: Arşiv
-      name: "Arşiv"
-      url: /arsiv/
-      weight: 5
-    - identifier: Ara
-      name: "Ara \U0001f50d"
-      url: /ara/
-      weight: 7
+    fa:
+        languagedirection: rtl
+        weight: 3
+        title: PaperMod RTL
+        homeInfoParams:
+            Title: "Hi there \U0001F44B"
+            Content: Welcome to RTL layout
+        taxonomies:
+          category: FAcategories
+          tag: FAtags
+          series: FAseries
+        menu:
+            main:
+                - name: FATags
+                  url: fatags
+                  weight: 10
 
 outputs:
     home:
@@ -51,61 +103,125 @@ outputs:
         - JSON
 
 params:
+    env: production # to enable google analytics, opengraph, twitter-cards and schema.
+    description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
+    author: Theme PaperMod
+    # author: ["Me", "You"] # multiple authors
+
+    defaultTheme: auto
+    # disableThemeToggle: true
     ShowShareButtons: true
     ShowReadingTime: true
-    ShowToc: true
-    tocopen: true
-    ShowRssButtonInSectionTermList: true
-    ShowFullTextinRSS: true
-    enableInlineShortcodes: true
-    enableRobotsTXT: true
-    buildDrafts: false
-    buildFuture: false
-    buildExpired: false
-    env: production
-    gtm_id: "GTM-5XKDQD65"
-    ShowBreadCrumbs: true
-    title: "Sxinar"
-    description: "Açıklama"
-    author: Sxinar
-    DateFormat: "2 January, 2006"
+    # disableSpecial1stPost: true
+    displayFullLangName: true
     ShowPostNavLinks: true
-    defaultTheme: auto
-    rss: true
-    ShowFullTextinRSS: true
-    TocOpen: true
+    ShowBreadCrumbs: true
     ShowCodeCopyButtons: true
-    comments: true
-    fuseOpts:
-    isCaseSensitive: false
-    shouldSort: true
-    enableEmoji: true
-    location: 0
-    distance: 1000
-    threshold: 0.4
-    minMatchCharLength: 0
-    keys: ["title", "permalink", "summary", "content"]
-  
+    ShowRssButtonInSectionTermList: true
+    ShowToc: true
+    # comments: false
+    images: ["papermod-cover.png"]
+
+    profileMode:
+        enabled: false
+        title: PaperMod
+        imageUrl: "#"
+        imageTitle: my image
+        # imageWidth: 120
+        # imageHeight: 120
+        buttons:
+            - name: Archives
+              url: archives
+            - name: Tags
+              url: tags
+
+    homeInfoParams:
+        Title: "PaperMod"
+        Content: >
+            Welcome to demo of hugo's theme PaperMod.
+
+            - **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX. This starter supports editing posts with NetlifyCMS, login at /admin. Most other configs (including this message!) happen in config.yml in the root directory.
+
+            - Do give a 🌟 on Github !
+
+            - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper).
+
     socialIcons:
-        - name: android
-          url: "https://www.android.com/"
         - name: github
-          url: "https://github.com/Sxinar"
-        - name: gitlab
-          url: "https://gitlab.com/Sxinar"
-        - name: xda
-          url: "https://xdaforums.com/m/basaransemih.12859096/"
-        - name: forum
-          url: "https://techolay.net/sosyal/uye/sxinar.2046"
-        - name: email
-          url: "mailto:me.unreal462@simplelogin.com"
-        - name: rss
-          url: "https://sxinar.github.io/index.xml"
-      
-    assets:
-        favicon: "https://avatars.githubusercontent.com/u/130384567?v=4"
+          url: "https://github.com/adityatelange/hugo-PaperMod"
+        - name: KoFi
+          url: "https://ko-fi.com/adityatelange"
+        - name: Rss
+          url: "index.xml"
 
     editPost:
-        URL: "https://github.com/sxinar/sxinar.github.io/tree/main/content"
-        Text: "Düzenle"
-        appendFilePath: true
+        URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
+        Text: "Suggest Changes" # edit text
+        appendFilePath: true # to append file path to Edit link
+
+    # label:
+    #     text: "Home"
+    #     icon: icon.png
+    #     iconHeight: 35
+
+    # analytics:
+    #     google:
+    #         SiteVerificationTag: "XYZabc"
+
+    assets:
+        disableHLJS: true
+    #     favicon: "<link / abs url>"
+    #     favicon16x16: "<link / abs url>"
+    #     favicon32x32: "<link / abs url>"
+    #     apple_touch_icon: "<link / abs url>"
+    #     safari_pinned_tab: "<link / abs url>"
+
+    # cover:
+    #     hidden: true # hide everywhere but not in structured data
+    #     hiddenInList: true # hide on list pages and home
+    #     hiddenInSingle: true # hide on single page
+
+    # fuseOpts:
+    #     isCaseSensitive: false
+    #     shouldSort: true
+    #     location: 0
+    #     distance: 1000
+    #     threshold: 0.4
+    #     minMatchCharLength: 0
+    #     keys: ["title", "permalink", "summary", "content"]
+
+markup:
+    goldmark:
+        renderer:
+            unsafe: true
+    highlight:
+        noClasses: false
+        # anchorLineNos: true
+        # codeFences: true
+        # guessSyntax: true
+        # lineNos: true
+        # style: monokai
+
+privacy:
+    vimeo:
+        disabled: false
+        simple: true
+
+    twitter:
+        disabled: false
+        enableDNT: true
+        simple: true
+
+    instagram:
+        disabled: false
+        simple: true
+
+    youtube:
+        disabled: false
+        privacyEnhanced: true
+
+services:
+    instagram:
+        disableInlineCSS: true
+    twitter:
+        disableInlineCSS: true
