--- a/config.yml
+++ b/config.yml
@@ -16,92 +16,67 @@ minify:
     disableXML: true
     # minifyOutput: true
 
-languages:
-    en:
-        languageName: "English"
-        weight: 1
-        taxonomies:
-          category: categories
-          tag: tags
-          series: series
-        menu:
-            main:
-                - name: Archive
-                  url: archives
-                  weight: 5
-                - name: Search
-                  url: search/
-                  weight: 10
-                - name: Tags
-                  url: tags/
-                  weight: 10
-                - name: WiKi
-                  url: https://github.com/adityatelange/hugo-PaperMod/wiki/
-                - name: Discord
-                  url: https://discord.gg/ahpmTvhVmp
 
-    fr:
-        languageName: ":fr:"
-        languageAltTitle: French
-        weight: 2
-        title: PaperModL2
-        taxonomies:
-          category: FRcategories
-          tag: FRtags
-          series: FRseries
-        profileMode:
-            enabled: true
-            title: PaperMod
-            imageUrl: "https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/1f317.svg"
-            imageTitle: ProfileMode image
-            # imageWidth: 120
-            # imageHeight: 120
-            subtitle: "☄️ Fast | ☁️ Fluent | 🌙 Smooth | 📱 Responsive"
-            buttons:
-                - name: Blog
-                  url: posts
-                - name: Profile Mode
-                  url: https://github.com/adityatelange/hugo-PaperMod/wiki/Features#profile-mode
-        menu:
-            main:
-                - name: Archive
-                  url: archives/
-                  weight: 5
-                - name: FRTags
-                  url: frtags
-                  weight: 10
-                - name: FRCategories
-                  url: frcategories
-                  weight: 10
-                - name: FRSeries
-                  url: frseries
-                  weight: 10
-                - name: NullLink
-                  url: "#"
+                languages:
+  tr:
+    languageName: ":tr:"
+    weight: 1
+    params:
+      languageAltTitle: Turkish
+      homeInfoParams:
+        Title: "Wise Web Works"
+        Content: Yarından az önceki günden daha çok akıllı!
+  en:
+    languageName: ":gb:"
+    weight: 2
+    params:
+      languageAltTitle: "English"
+      homeInfoParams:
+        Title: "Wise Web Works"
+        Content: Smarter Web Now!
 
-    fa:
-        languagedirection: rtl
-        weight: 3
-        title: PaperMod RTL
-        homeInfoParams:
-            Title: "Hi there \U0001F44B"
-            Content: Welcome to RTL layout
-        taxonomies:
-          category: FAcategories
-          tag: FAtags
-          series: FAseries
-        menu:
-            main:
-                - name: FATags
-                  url: fatags
-                  weight: 10
+  de:
+    languageName: ":de:"
+    weight: 3
+    params:
+      languageAltTitle: Deutsch
+      homeInfoParams:
+        Title: "Weise Web Jobs"
+        Content: Jetzt Weiser!
+
+menu:
+  main:
+    - identifier: Anasayfa
+      name: Anasayfa
+      url: /
+      weight: 1
+    - identifier: Blog
+      name: Blog
+      url: /post/
+      weight: 2
+    - identifier: İletişim
+      name: İletişim
+      url: /page/iletisim/
+      weight: 3
+    - identifier: Etiketler
+      name: Etiketler
+      url: /tags/
+      weight: 4
+    - identifier: Arşiv
+      name: "Arşiv"
+      url: /archives/
+      weight: 5
+    - identifier: Ara
+      name: "Ara \U0001f50d"
+      url: /search/
+      weight: 6
 
 outputs:
-    home:
-        - HTML
-        - RSS
-        - JSON
-
+  home:
+    - HTML
+    - RSS
+    - JSON
+    
 params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
     description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
